# cvbot

./: .pre-commit-config.yaml  README.md  example.ipynb  pyproject.toml  pytest.env
cvbot/communication/: controller.py  txtapiclient.py  txtapiconverter.py
cvbot/controller/: easy_drive_controller.py
docs/: setup.md
tests/communication/: test_txtapiclient.py
tests/controller/: test_easy_drive_controller.py
